--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "files.watcherExclude": {
     "**/target": true
+  },
+  "[rust]": {
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true
   }
 }
