--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ once_cell = "1.21.3"
 regex = "1"
 rand = "0.8"
 itertools = "0.14.0"
+reqwest = { version = "0.12.15", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive" ] }
+serde_json = "1"
