--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.21.3"
 regex = "1"
 rand = "0.8"
@@ -15,3 +15,4 @@ reqwest = { version = "0.12.15", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive" ] }
 serde_json = "1"
+actix-web = "4"
