--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive" ] }
 serde_json = "1"
 actix-web = "4"
+redis = "0.29.5"
