--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ once_cell = "1.21.3"
 regex = "1"
 rand = "0.8"
 itertools = "0.14.0"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive" ] }
 serde_json = "1"
@@ -26,3 +26,5 @@ thiserror = "2.0.12"
 clap = { version="4", features=["derive"] }
 anyhow = "1.0.98"
 proptest = "1.6.0"
+eframe = "0.31.1"
+image = "0.25.6"
